--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Welcome to United Crafts of America</h1>
 <p>A website dedicated to the craft brews in USA</p>
+<p>Testing associations...</p>
+
+<%= State.find(Brewery.all.first.state_id).breweries.first.name %>
+
+<%= Style.find(Beer.all.first.style_id).beers.first.name %>
+
+<p>Success!</p>
