--- a/app/views/breweries/_form.html.erb
+++ b/app/views/breweries/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :state %>
-    <%= form.text_field :state, id: :brewery_state_id %>
+    <%= form.label :state_id %>
+    <%= form.text_field :state_id, id: :brewery_state_id %>
   </div>
 
   <div class="actions">
