--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,28 +1,10 @@
 <h1>Welcome to United Crafts of America</h1>
 <p>A website dedicated to the craft brews in USA</p>
-<p>Some association testing...</p>
-<h2>Florida Breweries</h2>
+
+<h2>Number of craft beers per head of population (population - scale 1:100000)</h2>
 <ul>
-<% State.find_by(abrv: "FL").breweries.each do |b| %>
-<li><%= b.name %></li>
+<% @ratio.each do |k,v| %>
+<li><%= k %>: <%= number_with_precision(v, precision: 3)%></li>
 <% end %>
 </ul>
 
-<h2>Sierra Nevada Brewing Company - Brews:</h2>
-<ul>
-<% Brewery.find_by(name: "Sierra Nevada Brewing Company").beers.each do |b| %>
-<li><%= b.name %></li>
-<% end %>
-</ul>
-
-<h2>Beer Style - American IPA:</h2>
-<ul>
-<% Style.find_by(name: "American IPA").beers.each do |b| %>
-<li><%= b.name %></li>
-<% end %>
-</ul>
-
-<h2>Super G IPA - Style:</h2>
-<%= Beer.find_by(name: "Super G IPA").style.name %>
-
-<p>Success!</p>
