Integrate data on Google Maps

--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -1,6 +1,6 @@
 <h1>States</h1>
 <% @states.each do |state| %>
 <ul>
-	<li><%= state.abrv %> <%= state.name %> <%= state.population %></li>
+	<li><%= state.abrv %> <%= state.name %> <%= state.population %> <%= state.lat %> <%= state.long %></li>
 </ul>
 <% end %>
