--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -15,5 +15,11 @@
   <%= @brewery.state_id %>
 </p>
 
+<ul>
+     <% @brewery.beers.each do |b| %>
+    <li><%= link_to b.name, "/beers/#{b.id}" %></li>
+    <% end %>
+</ul>
+
 <%= link_to 'Edit', edit_brewery_path(@brewery) %> |
 <%= link_to 'Back', breweries_path %>
