--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,7 +1,6 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Beers</h1>
-
+<div class="under-nav">
+<h1>Crafts</h1>
+</div>
 <table>
   <thead>
     <tr>
