--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,9 +1,6 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @brewery.name %>
-</p>
+<div class="under-nav">
+<h2><%= @brewery.name %></h2>
+</div>
 
 <p>
   <strong>City:</strong>
