--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -1,4 +1,6 @@
+<div class="under-nav">
 <h1>States</h1>
+</div>
 <% @states.each do |state| %>
 <ul>
 	<li><%= state.abrv %> <%= state.name %> <%= state.population %> <%= state.lat %> <%= state.long %></li>
