--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,9 @@
 
-<h1>Welcome to United Crafts of America</h1>
-<p>A website dedicated to the craft brews in USA</p>
-<h2>Click on each marker to expand state data.</h2>
+<div class="under-nav">
+<img src="/beer_logo.png"/><h1 class="home_header">Welcome to United Crafts of America</h1>
+</div>
+<h3>A website dedicated to the craft brews in the USA</h3>
+<p>Click on each marker to expand the state data.</p>
 <div id="map"></div>
     <script>
       function initMap() {
