--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,9 +1,6 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @beer.name %>
-</p>
+<div class="under-nav">
+<h1><%= @beer.name %></h1>
+</div>
 
 <p>
   <strong>Abv:</strong>
