--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+  	<%= render :partial=> "layouts/header" %>
+  	
     <%= yield %>
+    <%= render :partial=> "layouts/footer" %>
   </body>
 </html>
