--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,7 @@
             <li><%= link_to "Breweries",   breweries_path %></li>
             <li><%= link_to "Crafts", beers_path %></li>
             <li><%= link_to "States", states_path %></li>
+            <li><%= link_to "Styles", styles_path %></li>
             </ul>
         </div>
     </div>
