--- a/app/views/styles/edit.html.erb
+++ b/app/views/styles/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Style</h1>
 
-<%= render 'form', style: @style %>
+<%- #render 'form', style: @style %>
 
-<%= link_to 'Show', @style %> |
-<%= link_to 'Back', styles_path %>
+<%- #link_to 'Show', @style %> 
+<%- #link_to 'Back', styles_path %>
