--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,6 +1,9 @@
 <div class="under-nav">
 <h1>Crafts</h1>
 </div>
+<div class="row">
+<div class="col-lg-3 col-xl-3 col-md-3"></div>
+<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 <table>
   <thead>
     <tr>
@@ -16,21 +19,25 @@
 
   <tbody>
     <% @beers.each do |beer| %>
+    <% if beer.style_id %>
+    <% style = Style.find(beer.style_id) %>
+    <% else %>
+    <% style = Style.find(378) %>
+    <% end %>
       <tr>
-        <td><%= beer.name %></td>
+        <td><%= link_to beer.name, "/beers/#{beer.id}" %></td>
         <td><%= beer.abv %></td>
         <td><%= beer.ibu %></td>
         <td><%= beer.ounces %></td>
-        <td><%= beer.brewery_id %></td>
-        <td><%= beer.style_id %></td>
-        <td><%= link_to 'Show', beer %></td>
-        <td><%= link_to 'Edit', edit_beer_path(beer) %></td>
-        <td><%= link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to Brewery.find(beer.brewery_id).name, "breweries/#{beer.brewery_id}" %></td>
+        <td><%= link_to style.name, "styles/#{style.id}" %></td>
+        <%- #link_to 'Show', beer %>
+        <%- #link_to 'Edit', edit_beer_path(beer) %>
+        <%- #link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' } %>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+<div class="col-lg-3 col-xl-3 col-md-3"></div>
 <br>
-
-<%= link_to 'New Beer', new_beer_path %>
+<%- #link_to 'New Beer', new_beer_path %>
