--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,31 +1,22 @@
 <div class="under-nav">
 <h1><%= @beer.name %></h1>
 </div>
-
-<p>
-  <strong>Abv:</strong>
-  <%= @beer.abv %>
-</p>
-
-<p>
-  <strong>Ibu:</strong>
-  <%= @beer.ibu %>
-</p>
-
-<p>
-  <strong>Ounces:</strong>
-  <%= @beer.ounces %>
-</p>
-
-<p>
-  <strong>Brewery:</strong>
-  <%= @beer.brewery_id %>
-</p>
-
-<p>
-  <strong>Style:</strong>
-  <%= @beer.style_id %>
-</p>
-
-<%= link_to 'Edit', edit_beer_path(@beer) %> |
-<%= link_to 'Back', beers_path %>
+<div class="row">
+<div class="col-lg-4 col-xl-4 col-md-4"></div>
+<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+<% if @beer.style_id %>
+    <% style = Style.find(@beer.style_id) %>
+    <% else %>
+    <% style = Style.find(378) %>
+    <% end %>
+<img class="float_left" src="/beer.png"/>
+<ul class="list_left">
+  <li>Abv: <%= @beer.abv %></li>
+  <li>Ibu: <%= @beer.ibu %></li>
+  <li>Ounces: <%= @beer.ounces %></li>
+  <li>Brewery: <%= link_to Brewery.find(@beer.brewery_id).name, "/breweries/#{@beer.brewery_id}" %></li>
+  <li>Style: <%= link_to style.name, "/styles/#{style.id}" %></li>
+</ul>
+<div class="col-lg-4 col-xl-4 col-md-4"></div>
+<%- #link_to 'Edit', edit_beer_path(@beer) %> 
+<%- #link_to 'Back', beers_path %>
