--- a/app/views/breweries/edit.html.erb
+++ b/app/views/breweries/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Brewery</h1>
 
-<%= render 'form', brewery: @brewery %>
+<%- #render 'form', brewery: @brewery %>
 
-<%= link_to 'Show', @brewery %> |
-<%= link_to 'Back', breweries_path %>
+<%- #link_to 'Show', @brewery %> 
+<%- #link_to 'Back', breweries_path %>
