--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,30 +1,32 @@
 <div class="under-nav">
 <h1>Breweries</h1>
 </div>
+<div class="row">
+<div class="col-lg-3 col-xl-3 col-md-3"></div>
+<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 <table>
   <thead>
     <tr>
       <th>Name</th>
       <th>City</th>
       <th>State</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @breweries.each do |brewery| %>
       <tr>
-        <td><%= brewery.name %></td>
+        <td><%= link_to brewery.name, "/breweries/#{brewery.id}" %></td>
         <td><%= brewery.city %></td>
-        <td><%= brewery.state_id %></td>
-        <td><%= link_to 'Show', brewery %></td>
-        <td><%= link_to 'Edit', edit_brewery_path(brewery) %></td>
-        <td><%= link_to 'Destroy', brewery, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to State.find(brewery.state_id).name, "/states/#{brewery.state_id}" %></td>
+        <%- #link_to 'Show', brewery %>
+        <%- #link_to 'Edit', edit_brewery_path(brewery) %>
+        <%- #link_to 'Destroy', brewery, method: :delete, data: { confirm: 'Are you sure?' } %>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+<div class="col-lg-3 col-xl-3 col-md-3"></div>
 <br>
 
-<%= link_to 'New Brewery', new_brewery_path %>
+<%- #link_to 'New Brewery', new_brewery_path %>
