--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Uca</title>
     <%= csrf_meta_tags %>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -12,6 +12,7 @@
   	<%= render :partial=> "layouts/header" %>
   	
     <%= yield %>
+    <div class="clearfix"></div>
     <%= render :partial=> "layouts/footer" %>
   </body>
 </html>
