--- a/app/views/layouts/map.html.erb
+++ b/app/views/layouts/map.html.erb
@@ -7,7 +7,8 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   <meta charset="utf-8">
-      <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+      
       <style>
   html, body, #map { height: 80%; margin: 20; padding: 20; }
     .nicebox {
