--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -1,7 +1,9 @@
-<p id="notice"><%= notice %></p>
-
+<div class="under-nav">
 <h1>Styles</h1>
-
+</div>
+<div class="row">
+<div class="col-lg-4 col-xl-4 col-md-4"></div>
+<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
 <table>
   <thead>
     <tr>
@@ -13,15 +15,15 @@
   <tbody>
     <% @styles.each do |style| %>
       <tr>
-        <td><%= style.name %></td>
-        <td><%= link_to 'Show', style %></td>
-        <td><%= link_to 'Edit', edit_style_path(style) %></td>
-        <td><%= link_to 'Destroy', style, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to style.name, "styles/#{style.id}" %></td>
+        <%- #link_to 'Show', style %>
+        <%- #link_to 'Edit', edit_style_path(style) %>
+        <%- #link_to 'Destroy', style, method: :delete, data: { confirm: 'Are you sure?' } %>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+<div class="col-lg-4 col-xl-4 col-md-4"></div>
 <br>
 
-<%= link_to 'New Style', new_style_path %>
+<%- #link_to 'New Style', new_style_path %>
