--- a/app/views/styles/new.html.erb
+++ b/app/views/styles/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Style</h1>
 
-<%= render 'form', style: @style %>
+<%- #render 'form', style: @style %>
 
-<%= link_to 'Back', styles_path %>
+<%- #link_to 'Back', styles_path %>
