--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -3,7 +3,6 @@
 </div>
   <h2>State: <%= link_to State.find(@brewery.state_id).name, "/states/#{@brewery.state_id}" %></h2>
   <h3>City: <%= @brewery.city %></h3>
-<div class="row">
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
 <table>
@@ -22,6 +21,7 @@
     <% end %>
 </tbody>
 </table>
+</div>
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
 <%- #link_to 'Edit', edit_brewery_path(@brewery) %> 
 <%- #link_to 'Back', breweries_path %>
