--- a/app/views/layouts/map.html.erb
+++ b/app/views/layouts/map.html.erb
@@ -79,6 +79,7 @@
   <body>
     <%= render :partial=> "layouts/header" %>
     <%= yield %>
+    <div class="clearfix"></div>
     <%= render :partial=> "layouts/footer" %>
   </body>
 </html>
