--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -1,7 +1,6 @@
 <div class="under-nav">
 <h1>States</h1>
 </div>
-<div class="row">
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
 <table>
@@ -21,4 +20,5 @@
 <% end %>
 </tbody>
 </table>
+</div>
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
