--- a/app/views/styles/show.html.erb
+++ b/app/views/styles/show.html.erb
@@ -2,7 +2,6 @@
   <h1>Name: <%= @style.name %></h1>
  </div>
 <h2><%= @style.name %> Crafts</h2>
-<div class="row">
 <div class="col-lg-3 col-xl-3 col-md-3"></div>
 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 <table>
@@ -26,6 +25,7 @@
     <% end %>
   </tbody>
 </table>
+</div>
 <div class="col-lg-3 col-xl-3 col-md-3"></div>
 
 <%- #link_to 'Edit', edit_style_path(@style) %> 
