--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,6 +1,7 @@
 <div class="under-nav">
 <h1>Crafts</h1>
 </div>
+<div class="row">
 <div class="col-lg-3 col-xl-3 col-md-3"></div>
 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 <table>
@@ -39,5 +40,5 @@
 </table>
 </div>
 <div class="col-lg-3 col-xl-3 col-md-3"></div>
-<br>
 <%- #link_to 'New Beer', new_beer_path %>
+</div>
