--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,6 +1,7 @@
 <div class="under-nav">
 <h1><%= @beer.name %></h1>
 </div>
+<div class="row">
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
 <% if @beer.style_id %>
@@ -20,3 +21,4 @@
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
 <%- #link_to 'Edit', edit_beer_path(@beer) %> 
 <%- #link_to 'Back', beers_path %>
+<div class="container">
