--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,6 +1,7 @@
 <div class="under-nav">
 <h2><%= @brewery.name %></h2>
 </div>
+<div class="row">
   <h2>State: <%= link_to State.find(@brewery.state_id).name, "/states/#{@brewery.state_id}" %></h2>
   <h3>City: <%= @brewery.city %></h3>
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
@@ -25,3 +26,4 @@
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
 <%- #link_to 'Edit', edit_brewery_path(@brewery) %> 
 <%- #link_to 'Back', breweries_path %>
+</div>
