--- a/app/views/error/not_found.html.erb
+++ b/app/views/error/not_found.html.erb
@@ -1,8 +1,10 @@
 <div class="under-nav">
 <h1>404</h1>
 </div>
+<div class="row">
 <h2>OH SNAP!</h2>
 <h3>Looks like one of us has been drinking.</h3>
 <h4>Not sure how you got here...but</h4>
 <div><%= link_to "click here to get home", root_path %></div>
 <div><a href="/"><img src="/beer.png"/></a></div>
+</div>
