--- a/app/views/states/show.html.erb
+++ b/app/views/states/show.html.erb
@@ -1,6 +1,7 @@
 <div class="under-nav">
 <h1><%= @state.name %></h1>
 </div>
+<div class="row">
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
 <h3>Breweries in <%= @state.name %>:</h3>
@@ -11,3 +12,4 @@
 </ul>
 </div>
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
+</div>
