--- a/app/views/styles/show.html.erb
+++ b/app/views/styles/show.html.erb
@@ -1,6 +1,7 @@
 <div class="under-nav">
   <h1>Name: <%= @style.name %></h1>
  </div>
+<div class="row">
 <h2><%= @style.name %> Crafts</h2>
 <div class="col-lg-3 col-xl-3 col-md-3"></div>
 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
@@ -27,6 +28,6 @@
 </table>
 </div>
 <div class="col-lg-3 col-xl-3 col-md-3"></div>
-
 <%- #link_to 'Edit', edit_style_path(@style) %> 
 <%- #link_to 'Back', styles_path %>
+</div>
