--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -1,6 +1,7 @@
 <div class="under-nav">
 <h1>Styles</h1>
 </div>
+<div class="row">
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
 <table>
@@ -24,6 +25,5 @@
 </table>
 </div>
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
-<br>
-
 <%- #link_to 'New Style', new_style_path %>
+</div>
