--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -29,6 +29,5 @@
 </div>
 <div class="col-lg-3 col-xl-3 col-md-3"></div>
 </div>
-<br>
-
 <%- #link_to 'New Brewery', new_brewery_path %>
+<%= will_paginate @breweries %>
