Fix pagination layout

--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -27,4 +27,6 @@
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
 <%- #link_to 'New Style', new_style_path %>
 </div>
+<div class="row">
 <%= will_paginate @styles %>
+</div>
