--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -42,5 +42,6 @@
 <div class="col-lg-3 col-xl-3 col-md-3"></div>
 <%- #link_to 'New Beer', new_beer_path %>
 </div>
+<div class="row">
 <%= will_paginate @beers %>
-
+</div>
