--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -29,5 +29,7 @@
 </div>
 <div class="col-lg-3 col-xl-3 col-md-3"></div>
 </div>
+<div class="row">
 <%- #link_to 'New Brewery', new_brewery_path %>
 <%= will_paginate @breweries %>
+</div>
