--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -15,7 +15,8 @@
   </thead>
 
   <tbody>
-     <% @brewery.beers.each do |b| %>
+  	 <% @beers =  @brewery.beers.order(:name).paginate(:page => params[:page], :per_page => 10) %>
+     <% @beers.each do |b| %>
     <tr>
     <td><%= link_to b.name, "/beers/#{b.id}" %></td><td><%= link_to b.style.name, "/styles/#{b.style.id}" %></td>
     </tr>
@@ -26,4 +27,7 @@
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
 <%- #link_to 'Edit', edit_brewery_path(@brewery) %> 
 <%- #link_to 'Back', breweries_path %>
+</div>
+<div class="row">
+<%= will_paginate @beers %>
 </div>
