--- a/app/views/states/show.html.erb
+++ b/app/views/states/show.html.erb
@@ -6,10 +6,14 @@
 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
 <h3>Breweries in <%= @state.name %>:</h3>
 <ul class="list_left">
-     <% @state.breweries.each do |br| %>
+	 <% @breweries = @state.breweries.order(:name).paginate(:page => params[:page], :per_page => 10) %>
+     <% @breweries.each do |br| %>
     <li>Name: <%= link_to br.name, "/breweries/#{br.id}" %> City: <%= br.city %></li>
     <% end %>
 </ul>
 </div>
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
+</div>
+<div class="row">
+<%= will_paginate @breweries %>
 </div>
