Add charts to each style

--- a/app/views/states/index.html.erb
+++ b/app/views/states/index.html.erb
@@ -9,7 +9,7 @@
     <tr>
       <th>Name</th>
       <th>Population</th>
-      <th>Breveries</th>
+      <th>No. of Breweries</th>
     </tr>
     </thead>
 
