--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -3,19 +3,16 @@
 </div>
 <div class="row">
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
-<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-<% if @beer.style_id %>
-    <% style = Style.find(@beer.style_id) %>
-    <% else %>
-    <% style = Style.find(378) %>
-    <% end %>
+<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4"> 
 <img class="float_left" src="/beer.png"/>
 <ul class="list_left">
-  <li>Abv: <%= @beer.abv * 100 %>%</li>
+  <li>Abv: <%= number_with_precision(@beer.abv * 100, :precision => 2) %>%</li>
   <li>Ibu: <%= @beer.ibu %></li>
   <li>Ounces: <%= @beer.ounces %></li>
   <li>Brewery: <%= link_to Brewery.find(@beer.brewery_id).name, "/breweries/#{@beer.brewery_id}" %></li>
-  <li>Style: <%= link_to style.name, "/styles/#{style.id}" %></li>
+  <% if @beer.style_id %>
+  <li>Style: <%= link_to Style.find(@beer.style_id).name, "/styles/#{@beer.style_id}" %></li>
+  <% end %>
 </ul>
 </div>
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
