--- a/app/views/states/beers.html.erb
+++ b/app/views/states/beers.html.erb
@@ -2,8 +2,8 @@
 <h1>Craft Beers in <%= @state.name %></h1>
 </div>
 <div class="row">
-<div class="col-lg-4 col-xl-4 col-md-4"></div>
-<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+<div class="col-lg-3 col-xl-3 col-md-3"></div>
+<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 <h4>Number of craft beers in: <%= @num_beers %></h4>
 <h4><%= link_to "Number of craft beer breweries in #{@state.name}", "/states/#{@state.id}" %>: <%= @state.breweries.count() %></h4>
 <h3>Beers in <%= @state.name %>:</h3>
@@ -33,8 +33,12 @@
         <td><%= beer.abv %></td>
         <td><%= beer.ibu %></td>
         <td><%= beer.ounces %></td>
-        <td><%= link_to Brewery.find(beer.brewery_id).name, "breweries/#{beer.brewery_id}" %></td>
-        <td><%= link_to style.name, "styles/#{style.id}" %></td>
+        <td><%= link_to Brewery.find(beer.brewery_id).name, "/breweries/#{beer.brewery_id}" %></td>
+        <% if beer.style_id %>
+        <td><%= link_to Style.find(beer.style_id).name, "/styles/#{beer.style_id}" %></td>
+        <% else %>
+        <td></td>
+        <% end %>
         <%- #link_to 'Show', beer %>
         <%- #link_to 'Edit', edit_beer_path(beer) %>
         <%- #link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' } %>
@@ -43,7 +47,7 @@
   </tbody>
 </table>
 </div>
-<div class="col-lg-4 col-xl-4 col-md-4"></div>
+<div class="col-lg-3 col-xl-3 col-md-3"></div>
 </div>
 <div class="row">
 <%= will_paginate @beers %>
