Add dropdown menu items

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -91,3 +91,10 @@ a:active {
 	margin-bottom: 5px;
 	}
 }
+/* Dropdown menu background color*/
+
+.navbar-nav > li > .dropdown-menu {     background-color: #080808;  }
+
+/* Dropdown menu font color*/ 
+
+ .navbar-nav > li > .dropdown-menu a{   color: #555555;  }
