--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,23 @@
             <li><%= link_to "Crafts", beers_path %></li>
             <li><%= link_to "States", states_path %></li>
             <li><%= link_to "Styles", styles_path %></li>
+            <li class="dropdown">
+            <a href="#" data-toggle="dropdown" class="dropdown-toggle">Top10 <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+                <li><a href="#">Crafty states</a></li>
+                <li><a href="#">Strongest Brews</a></li>
+                <li><a href="#">Brewed styles</a></li>
+            </ul>
+        </li>
+             <li class="dropdown">
+            <a href="#" data-toggle="dropdown" class="dropdown-toggle">JSON API <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+                <li><a href="/api/beer">Beers</a></li>
+                <li><a href="/api/brewery">Breweries</a></li>
+                <li><a href="/api/style">Styles</a></li>
+                <li><a href="/api/state">States</a></li>
+            </ul>
+        </li>
             </ul>
         </div>
     </div>
