--- a/app/views/styles/show.html.erb
+++ b/app/views/styles/show.html.erb
@@ -7,7 +7,7 @@
 <div class="row">
 <div class="col-lg-3 col-xl-3 col-md-3"></div>
 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-<h3>Percentage of <%= @style.name %> of total crafts in the US</h3>
+<h3><%= @style.name %> percent of total crafts in the US</h3>
 <canvas id="myChart" class="myChart" style="display: block; height: 203px; width: 436px;margin-bottom: 20px;"></canvas>
 <script>
 new Chart(document.getElementById("myChart"),{"type":"doughnut","data":{"labels":["Other styles <%= (100 - beers_percent.to_i) %>%","<%= @style.name %> <%= (beers_percent.to_i < 1) ? "less than 1" : beers_percent.to_i %>%"],"datasets":[{"label":"Percent of total <%= @style.name %> in USA","data":[<%= (100 - beers_percent.to_i) %>, <%= beers_percent.to_i %>],"backgroundColor":["rgb(255, 99, 132)","rgb(255, 205, 86)"]}]}});
