Populate top ten charts

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,9 +21,9 @@
             <li class="dropdown">
             <a href="#" data-toggle="dropdown" class="dropdown-toggle">Top10 <b class="caret"></b></a>
             <ul class="dropdown-menu">
-                <li><a href="#">Crafty states</a></li>
-                <li><a href="#">Strongest Brews</a></li>
-                <li><a href="#">Brewed styles</a></li>
+                <li><a href="/topten/craftystates">Crafty states</a></li>
+                <li><a href="/topten/strongestbrews">Strongest Brews</a></li>
+                <li><a href="/topten/brewedstyles">Brewed styles</a></li>
             </ul>
         </li>
              <li class="dropdown">
