Fix charts layout

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -91,6 +91,10 @@ a:active {
 	margin-bottom: 5px;
 	}
 }
+.space {
+	display: block;
+	height: 5%;
+}
 /* Dropdown menu background color*/
 
 .navbar-nav > li > .dropdown-menu {     background-color: #222;  }
