--- a/app/views/topten/brewedstyles.html.erb
+++ b/app/views/topten/brewedstyles.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="chart-container">
     <canvas id="chart"></canvas>
-</div>
+    </div>
 <script>
 var styles = [];
 var beers = [];
@@ -49,5 +49,5 @@ new Chart('chart', {
     options: options
 });
 </script>
-
 </div>
+<div class="space"></div>
