Add content to views

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -95,6 +95,9 @@ a:active {
 	display: block;
 	height: 5%;
 }
+.center {
+	text-align: center;
+}
 /* Dropdown menu background color*/
 
 .navbar-nav > li > .dropdown-menu {     background-color: #222;  }
