--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -6,6 +6,7 @@
   <h3>City: <%= @brewery.city %></h3>
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+  <h4>Crafts brewed in <strong><%= @brewery.name %></strong></h4>
 <table>
   <thead>
     <tr>
