--- a/app/views/states/show.html.erb
+++ b/app/views/states/show.html.erb
@@ -16,12 +16,22 @@ Chart.defaults.global.defaultFontColor = '#666';
 <h4><%= link_to "Number of craft beers in #{@state.name}", "/states/beers/#{@state.id}" %>: <%= @num_beers %></h4>
 <h4>Number of craft beer breweries in <%= @state.name %>: <%= @state.breweries.count() %></h4>
 <h3>Breweries in <%= @state.name %>:</h3>
-<ul class="list_left">
+<table>
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>City</th>
+    </tr>
+  </thead>
+  <tbody>
 	 <% @breweries = @state.breweries.order(:name).paginate(:page => params[:page], :per_page => 10) %>
      <% @breweries.each do |br| %>
-    <li>Name: <%= link_to br.name, "/breweries/#{br.id}" %> City: <%= br.city %></li>
+  <tr>
+    <td><%= link_to br.name, "/breweries/#{br.id}" %></td><td><%= br.city %></td>
+  </tr>
     <% end %>
-</ul>
+</tbody>
+</table>
 </div>
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
 </div>
