--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -8,6 +8,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>No of crafts</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
     <% @styles.each do |style| %>
       <tr>
         <td><%= link_to style.name, "styles/#{style.id}" %></td>
+        <td><%= Beer.where(style_id: style.id).count() %></td>
         <%- #link_to 'Show', style %>
         <%- #link_to 'Edit', edit_style_path(style) %>
         <%- #link_to 'Destroy', style, method: :delete, data: { confirm: 'Are you sure?' } %>
