--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -4,6 +4,11 @@
 <div class="row">
 <div class="col-lg-3 col-xl-3 col-md-3"></div>
 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+<h4>Search beer by name</h4>
+<%= form_tag("/beers/search", :method => "post") do %>
+    <%= text_field_tag :name, params[:name] %>
+    <%= submit_tag "Search", :name => nil %>
+<% end %>
 <table>
   <thead>
     <tr>
@@ -29,7 +34,7 @@
         <td><%= beer.abv %></td>
         <td><%= beer.ibu %></td>
         <td><%= beer.ounces %></td>
-        <td><%= link_to Brewery.find(beer.brewery_id).name, "breweries/#{beer.brewery_id}" %></td>
+        <td><%= link_to Brewery.find(beer.brewery_id).name, "/breweries/#{beer.brewery_id}" %></td>
         <% if beer.style_id %>
   <td>Style: <%= link_to Style.find(beer.style_id).name, "/styles/#{beer.style_id}" %></td>
   <% else %>
