--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -4,6 +4,11 @@
 <div class="row">
 <div class="col-lg-3 col-xl-3 col-md-3"></div>
 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
+  <h4>Search brewery by name</h4>
+  <%= form_tag("/breweries/search", :method => "post") do %>
+    <%= text_field_tag :name, params[:name] %>
+    <%= submit_tag "Search", :name => nil %>
+<% end %>
 <table>
   <thead>
     <tr>
