--- a/app/views/error/not_found.html.erb
+++ b/app/views/error/not_found.html.erb
@@ -2,9 +2,11 @@
 <h1>404</h1>
 </div>
 <div class="row">
+<!-- Text from http://johnbohls.com/portfolio/tweet-a-beer -->
 <h2>OH SNAP!</h2>
 <h3>Looks like one of us has been drinking.</h3>
 <h4>Not sure how you got here...but</h4>
 <div><%= link_to "click here to get home", root_path %></div>
+<!-- image from http://www.calgarybrewerytours.beer/tours/ -->
 <div><a href="/"><img src="/beer.png"/></a></div>
 </div>
