--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -4,6 +4,11 @@
 <div class="row">
 <div class="col-lg-4 col-xl-4 col-md-4"></div>
 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+  <h4>Search style by name</h4>
+  <%= form_tag("/styles/search", :method => "post") do %>
+    <%= text_field_tag :name, params[:name] %>
+    <%= submit_tag "Search", :name => nil %>
+<% end %>
 <table>
   <thead>
     <tr>
@@ -16,7 +21,7 @@
   <tbody>
     <% @styles.each do |style| %>
       <tr>
-        <td><%= link_to style.name, "styles/#{style.id}" %></td>
+        <td><%= link_to style.name, "/styles/#{style.id}" %></td>
         <td><%= Beer.where(style_id: style.id).count() %></td>
         <%- #link_to 'Show', style %>
         <%- #link_to 'Edit', edit_style_path(style) %>
