--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="under-nav">
 <!-- image from http://www.calgarybrewerytours.beer/tours/ -->
-<img src="/beer_logo.png"/><h1 class="home_header">Welcome to United Crafts of America</h1>
+<img src="/beer_logo.png"/><h1 class="home_header hidden-xs">Welcome to United Crafts of America</h1>
 </div>
 <h3>A website dedicated to the craft brews in the USA</h3>
 <p>Click on each marker to expand the state data.</p>
