--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -2,8 +2,8 @@
 <h1>Crafts</h1>
 </div>
 <div class="row">
-<div class="col-lg-4 col-xl-4 col-md-4"></div>
-<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
+<div class="col-lg-3 col-xl-3 col-md-3"></div>
+<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 <h4>Search beer by name</h4>
 <%= form_tag("/beers/search", :method => "post") do %>
     <%= text_field_tag :name, params[:name] %>
@@ -13,7 +13,11 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th class="home_header hidden-xs">Abv</th>
+      <th class="home_header hidden-xs">Ibu</th>
+      <th class="home_header hidden-xs">Ounces</th>
       <th>Brewery</th>
+      <th class="home_header hidden-xs">Style</th>
     </tr>
   </thead>
 
@@ -26,7 +30,15 @@
     <% end %>
       <tr>
         <td><%= link_to beer.name, "/beers/#{beer.id}" %></td>
+        <td class="home_header hidden-xs"><%= beer.abv %></td>
+        <td class="home_header hidden-xs"><%= beer.ibu %></td>
+        <td class="home_header hidden-xs"><%= beer.ounces %></td>
         <td><%= link_to Brewery.find(beer.brewery_id).name, "/breweries/#{beer.brewery_id}" %></td>
+        <% if beer.style_id %>
+  <td class="home_header hidden-xs">Style: <%= link_to Style.find(beer.style_id).name, "/styles/#{beer.style_id}" %></td>
+  <% else %>
+  <td class="home_header hidden-xs"></td>
+  <% end %>
         <%- #link_to 'Show', beer %>
         <%- #link_to 'Edit', edit_beer_path(beer) %>
         <%- #link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' } %>
@@ -35,7 +47,7 @@
   </tbody>
 </table>
 </div>
-<div class="col-lg-4 col-xl-4 col-md-4"></div>
+<div class="col-lg-3 col-xl-3 col-md-3"></div>
 <%- #link_to 'New Beer', new_beer_path %>
 </div>
 <div class="row">
