--- a/app/views/beers/search.html.erb
+++ b/app/views/beers/search.html.erb
@@ -13,12 +13,11 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Abv</th>
-      <th>Ibu</th>
-      <th>Ounces</th>
+      <th class="hidden-xs">Abv</th>
+      <th class="hidden-xs">Ibu</th>
+      <th class="hidden-xs">Ounces</th>
       <th>Brewery</th>
-      <th>Style</th>
-      <th colspan="3"></th>
+      <th class="hidden-xs">Style</th>
     </tr>
   </thead>
 
@@ -33,14 +32,14 @@
     <% end %>
       <tr>
         <td><%= link_to beer.name, "/beers/#{beer.id}" %></td>
-        <td><%= beer.abv %></td>
-        <td><%= beer.ibu %></td>
-        <td><%= beer.ounces %></td>
+        <td class="hidden-xs"><%= beer.abv %></td>
+        <td class="hidden-xs"><%= beer.ibu %></td>
+        <td class="hidden-xs"><%= beer.ounces %></td>
         <td><%= link_to Brewery.find(beer.brewery_id).name, "/breweries/#{beer.brewery_id}" %></td>
         <% if beer.style_id %>
-  <td>Style: <%= link_to Style.find(beer.style_id).name, "/styles/#{beer.style_id}" %></td>
+  <td class="hidden-xs">Style: <%= link_to Style.find(beer.style_id).name, "/styles/#{beer.style_id}" %></td>
   <% else %>
-  <td></td>
+  <td class="hidden-xs"></td>
   <% end %>
         <%- #link_to 'Show', beer %>
         <%- #link_to 'Edit', edit_beer_path(beer) %>
