Fix typo in states

--- a/app/views/states/beers.html.erb
+++ b/app/views/states/beers.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
 <div class="col-lg-3 col-xl-3 col-md-3"></div>
 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-<h4>Number of craft beers in: <%= @num_beers %></h4>
+<h4>Number of craft beers in <%= @state.name %>: <%= @num_beers %></h4>
 <h4><%= link_to "Number of craft beer breweries in #{@state.name}", "/states/#{@state.id}" %>: <%= @state.breweries.count() %></h4>
 <h3>Beers in <%= @state.name %>:</h3>
 <table>
